{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 128,
  "lineage": "f9c58d87-4778-1338-d718-03c86d1701f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:route-table/rtb-0fbbc05def8063405",
            "id": "rtb-0fbbc05def8063405",
            "owner_id": "970725631057",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d7745febacee4c9a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0567abdee4155173e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acc610dda60dea81",
            "route_table_id": "rtb-0fbbc05def8063405",
            "subnet_id": "subnet-0a030800b17f9af42"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:security-group/sg-0abf5f05dfbc2c56d",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abf5f05dfbc2c56d",
            "ingress": [],
            "name": "ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "970725631057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-tasks-sg"
            },
            "tags_all": {
              "Name": "ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0567abdee4155173e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:security-group/sg-085f1f22ab7dcf861",
            "description": "Security group for VPC endpoints",
            "egress": [],
            "id": "sg-085f1f22ab7dcf861",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0abf5f05dfbc2c56d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoints-security-group",
            "name_prefix": "",
            "owner_id": "970725631057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-endpoints-sg"
            },
            "tags_all": {
              "Name": "vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0567abdee4155173e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:subnet/subnet-0a030800b17f9af42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a030800b17f9af42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970725631057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0567abdee4155173e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:vpc/vpc-0567abdee4155173e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056b9bbbcbf9f9636",
            "default_route_table_id": "rtb-0b3327765376a3214",
            "default_security_group_id": "sg-0ea11e0119dddc921",
            "dhcp_options_id": "dopt-0ce8ec3127a37ff58",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0567abdee4155173e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3327765376a3214",
            "owner_id": "970725631057",
            "tags": {
              "Name": "video-processor-vpc"
            },
            "tags_all": {
              "Name": "video-processor-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:vpc-endpoint/vpce-0f7695e22bb756b96",
            "dns_entry": [
              {
                "dns_name": "vpce-0f7695e22bb756b96-tgpzag5g.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0f7695e22bb756b96-tgpzag5g-us-west-2a.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "api.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0020758TW0EWZ58QSG8"
              },
              {
                "dns_name": "ecr.us-west-2.api.aws",
                "hosted_zone_id": "Z0159322WNUHQUNEAXJ4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0f7695e22bb756b96",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05345956cd8adbb08"
            ],
            "owner_id": "970725631057",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085f1f22ab7dcf861"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0a030800b17f9af42"
            ],
            "tags": {
              "Name": "ecr-api-endpoint"
            },
            "tags_all": {
              "Name": "ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0567abdee4155173e"
          },
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:vpc-endpoint/vpce-023e7344bb656aea9",
            "dns_entry": [
              {
                "dns_name": "vpce-023e7344bb656aea9-1cv8r9ph.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-023e7344bb656aea9-1cv8r9ph-us-west-2a.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "dkr.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z00209351XU47HDKOEM6B"
              },
              {
                "dns_name": "*.dkr.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z00209351XU47HDKOEM6B"
              },
              {
                "dns_name": "dkr-ecr.us-west-2.on.aws",
                "hosted_zone_id": "Z0020938JBZXJ2Z75FC1"
              },
              {
                "dns_name": "*.dkr-ecr.us-west-2.on.aws",
                "hosted_zone_id": "Z0020938JBZXJ2Z75FC1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-023e7344bb656aea9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0de4dee5def74fe6b"
            ],
            "owner_id": "970725631057",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085f1f22ab7dcf861"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0a030800b17f9af42"
            ],
            "tags": {
              "Name": "ecr-dkr-endpoint"
            },
            "tags_all": {
              "Name": "ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0567abdee4155173e"
          },
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:vpc-endpoint/vpce-04fa4d741beaae1aa",
            "dns_entry": [
              {
                "dns_name": "vpce-04fa4d741beaae1aa-oz82jq15.events.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-04fa4d741beaae1aa-oz82jq15-us-west-2a.events.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "events.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z002092918R4JFMIZBLRV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-04fa4d741beaae1aa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0667df52dd4b57e4b"
            ],
            "owner_id": "970725631057",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085f1f22ab7dcf861"
            ],
            "service_name": "com.amazonaws.us-west-2.events",
            "state": "available",
            "subnet_ids": [
              "subnet-0a030800b17f9af42"
            ],
            "tags": {
              "Name": "events-endpoint"
            },
            "tags_all": {
              "Name": "events-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0567abdee4155173e"
          },
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:vpc-endpoint/vpce-01a7d3eb9596cc4f7",
            "dns_entry": [
              {
                "dns_name": "vpce-01a7d3eb9596cc4f7-rj6n89jo.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-01a7d3eb9596cc4f7-rj6n89jo-us-west-2a.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "logs.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z01588435S30GLZL5XI2"
              },
              {
                "dns_name": "logs.us-west-2.api.aws",
                "hosted_zone_id": "Z00444242N6USX1M4BXAY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-01a7d3eb9596cc4f7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-019b07dc0957917e7"
            ],
            "owner_id": "970725631057",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085f1f22ab7dcf861"
            ],
            "service_name": "com.amazonaws.us-west-2.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-0a030800b17f9af42"
            ],
            "tags": {
              "Name": "logs-endpoint"
            },
            "tags_all": {
              "Name": "logs-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0567abdee4155173e"
          },
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:vpc-endpoint/vpce-0441862ec00d09e2c",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0441862ec00d09e2c",
            "owner_id": "970725631057",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0fbbc05def8063405"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "s3-endpoint"
            },
            "tags_all": {
              "Name": "s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0567abdee4155173e"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:970725631057:vpc-endpoint/vpce-0f99d4d00604d8713",
            "dns_entry": [
              {
                "dns_name": "vpce-0f99d4d00604d8713-aildonbp.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0f99d4d00604d8713-aildonbp-us-west-2a.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "secretsmanager.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z00223812CPDI87548L6U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0f99d4d00604d8713",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-004d3d956996c2a4a"
            ],
            "owner_id": "970725631057",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-085f1f22ab7dcf861"
            ],
            "service_name": "com.amazonaws.us-west-2.secretsmanager",
            "state": "available",
            "subnet_ids": [
              "subnet-0a030800b17f9af42"
            ],
            "tags": {
              "Name": "secretsmanager-endpoint"
            },
            "tags_all": {
              "Name": "secretsmanager-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0567abdee4155173e"
          },
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}